Fix z-index

--- a/src/components/CityItem.scss
+++ b/src/components/CityItem.scss
@@ -24,7 +24,7 @@
     // height: 100%;
     width: 95%;
     gap: 1rem;
-    z-index: 1;
+    // z-index: 1;
   }
 
   // &__short-info {
