--- a/src/components/SearchBar.scss
+++ b/src/components/SearchBar.scss
@@ -16,7 +16,7 @@
     border: 1px solid #ffffff;
     // width: 100%;
     padding: 0.3rem;
-    z-index: 8;
+    // z-index: 8;
   }
 
   &__search-window {
@@ -27,7 +27,7 @@
     height: fit-content;
     // height: 300px;
     top: 38px;
-    z-index: 10;
+    z-index: 100;
     // border: 12px solid red;
     box-shadow: 0px 0px 2px 2px #ff000080;
     margin: 0 auto;
