--- a/src/routes/main/Main.scss
+++ b/src/routes/main/Main.scss
@@ -39,9 +39,8 @@
     height: 100%;
     scrollbar-width: none;
     // overflow-y: scroll;
-    z-index: 1;
+    // z-index: 1;
     overflow-y: auto;
     // margin: 0.5rem;
-    margin-top: 3rem;
   }
 }
